[project]
name = "loads"
version = "0.1.0"
description = "Car and freight tracking solution"
authors = [
    {name = "Alex Halitsky",email = "ceasione@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-telegram-bot (>=22.3,<23.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pyngrok = "^7.0.0"
pytest-asyncio = "^1.1.0"
deptry = "^0.23.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
